<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout


        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textViewTítulo"
            android:layout_width="211dp"
            android:layout_height="30dp"
            android:fontFamily="@font/brawler"
            android:text="@string/mi_perfil_personal"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.92"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.066" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="155dp"
            android:layout_height="136dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textViewTítulo"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.026"
            app:srcCompat="@drawable/foto_perfil" />

        <EditText
            android:id="@+id/editTextNombre"
            android:layout_width="168dp"
            android:layout_height="51dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="91dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/editTextCorreo"
            android:layout_width="167dp"
            android:layout_height="48dp"
            android:layout_marginStart="152dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="104dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.083"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextApellido" />

        <EditText
            android:id="@+id/editTextApellido"
            android:layout_width="171dp"
            android:layout_height="53dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="88dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewApellido"
            app:layout_constraintTop_toBottomOf="@+id/editTextNombre" />

        <TextView
            android:id="@+id/textViewNombre"
            android:layout_width="109dp"
            android:layout_height="30dp"
            android:layout_marginStart="46dp"
            android:layout_marginTop="69dp"
            android:layout_marginBottom="28dp"
            android:text="@string/nombre"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextApellido"
            app:layout_constraintEnd_toStartOf="@+id/editTextNombre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintWidth_percent="0.257" />

        <TextView
            android:id="@+id/textViewApellido"
            android:layout_width="107dp"
            android:layout_height="26dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="1dp"
            android:text="@string/apellido"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/editTextApellido"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNombre"
            app:layout_constraintWidth_percent="0.257" />

        <TextView
            android:id="@+id/textViewCorreo"
            android:layout_width="117dp"
            android:layout_height="54dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="17dp"
            android:text="@string/correo_electr_nico"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/editTextCorreo"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewApellido"
            app:layout_constraintWidth_percent="0.257" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="173dp"
            android:layout_height="143dp"
            android:layout_marginStart="108dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="132dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <RadioButton
                android:id="@+id/radioButtonMasculino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/masculino" />

            <RadioButton
                android:id="@+id/radioButtonFemenino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/femenino" />

            <RadioButton
                android:id="@+id/radioButtonOtro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/otro" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="166dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="194dp"
            android:text="@string/g_nero"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextCorreo" />

        <Button
            android:id="@+id/buttonGuardar"
            android:layout_width="135dp"
            android:layout_height="96dp"
            android:layout_marginStart="243dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="33dp"
            android:backgroundTint="#4CAF50"
            android:text="@string/guardar"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switchBoletin" />

        <Spinner
            android:id="@+id/spinnerPais"
            android:layout_width="407dp"
            android:layout_height="52dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="51dp"
            app:layout_constraintBottom_toTopOf="@+id/textViewIntereses"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPais" />

        <TextView
            android:id="@+id/textViewPais"
            android:layout_width="178dp"
            android:layout_height="23dp"
            android:layout_marginStart="107dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="126dp"
            android:layout_marginBottom="15dp"
            android:text="@string/selecciona_pa_s_de_origen"
            app:layout_constraintBottom_toTopOf="@+id/spinnerPais"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <CheckBox
            android:id="@+id/checkBoxLectura"
            android:layout_width="174dp"
            android:layout_height="67dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="2dp"
            android:text="@string/lectura"
            app:layout_constraintBottom_toTopOf="@+id/checkBoxMusica"
            app:layout_constraintEnd_toStartOf="@+id/checkBoxDeporte"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewIntereses" />

        <CheckBox
            android:id="@+id/checkBoxDeporte"
            android:layout_width="203dp"
            android:layout_height="71dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="1dp"
            android:text="@string/deporte"
            app:layout_constraintBottom_toTopOf="@+id/checkBoxArte"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/checkBoxLectura"
            app:layout_constraintTop_toBottomOf="@+id/textViewIntereses" />

        <TextView
            android:id="@+id/textViewIntereses"
            android:layout_width="217dp"
            android:layout_height="40dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="51dp"
            android:layout_marginEnd="168dp"
            android:layout_marginBottom="6dp"
            android:text="@string/selecciona_uno_o_m_s_hobbies"
            app:layout_constraintBottom_toTopOf="@+id/checkBoxDeporte"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerPais" />

        <CheckBox
            android:id="@+id/checkBoxMusica"
            android:layout_width="176dp"
            android:layout_height="65dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="38dp"
            android:text="@string/m_sica"
            app:layout_constraintBottom_toTopOf="@+id/textViewSatisfaccion"
            app:layout_constraintEnd_toStartOf="@+id/checkBoxArte"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxLectura" />

        <CheckBox
            android:id="@+id/checkBoxArte"
            android:layout_width="202dp"
            android:layout_height="68dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="38dp"
            android:text="@string/arte"
            app:layout_constraintBottom_toTopOf="@+id/textViewSatisfaccion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/checkBoxMusica"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxDeporte" />

        <SeekBar
            android:id="@+id/seekBarSatisfaccion"
            android:layout_width="313dp"
            android:layout_height="32dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="46dp"
            android:layout_marginBottom="30dp"
            android:max="10"
            android:progressTint="#FFC107"
            android:thumb="@android:drawable/btn_star_big_on"
            app:layout_constraintBottom_toTopOf="@+id/textViewNivelSatisfaccion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSatisfaccion" />

        <TextView
            android:id="@+id/textViewSatisfaccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="92dp"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="102dp"
            android:text="@string/seleccione_su_nivel_de_satisfacci_n"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxMusica" />

        <TextView
            android:id="@+id/textViewNivelSatisfaccion"
            android:layout_width="113dp"
            android:layout_height="23dp"
            android:layout_marginStart="149dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="149dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBarSatisfaccion" />

        <Switch
            android:id="@+id/switchBoletin"
            android:layout_width="176dp"
            android:layout_height="136dp"
            android:layout_marginStart="107dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="128dp"
            android:checked="false"
            android:splitTrack="false"
            android:text="@string/suscripci_n_al_bolet_n_informativo"
            android:thumbTint="#9575CD"
            android:trackTint="#101010"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNivelSatisfaccion"
            tools:checked="false" />

        <TextView
            android:id="@+id/textViewMostrar"
            android:layout_width="413dp"
            android:layout_height="303dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.166"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonGuardar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>